@@ -9,6 +9,7 @@ import com.yahoo.vdslib.distribution.Group;
 import com.yahoo.vdslib.distribution.GroupVisitor;
 import com.yahoo.vespa.config.content.StorDistributionConfig;
 
+import java.util.Locale;
 import java.util.Objects;
 
 /**
@@ -68,7 +69,7 @@ public class DistributionConfigBundle {
     public int searchableCopies() { return config.ready_copies(); }
 
     public String highLevelDescription() {
-        return "%d nodes; %d groups; redundancy %d; searchable-copies %d".formatted(
+        return String.format(Locale.ROOT, "%d nodes; %d groups; redundancy %d; searchable-copies %d", 
                 totalNodeCount(), totalLeafGroupCount(), redundancy(), searchableCopies());
     }
 
