@@ -11,6 +11,7 @@ import com.yahoo.config.model.api.ContainerEndpoint;
 import com.yahoo.config.model.api.ModelContext;
 import com.yahoo.config.model.builder.xml.test.DomBuilderTest;
 import com.yahoo.config.model.deploy.DeployState;
+import com.yahoo.config.model.deploy.TestDeployState;
 import com.yahoo.config.model.deploy.TestProperties;
 import com.yahoo.config.model.producer.AbstractConfigProducerRoot;
 import com.yahoo.config.model.provision.InMemoryProvisioner;
@@ -323,7 +324,7 @@ public class ContainerModelBuilderTest extends ContainerModelBuilderTestBase {
                                <nodes count='2' />
                              </container>
                              """;
-        String deploymentXml = """
+        String deploymentXml = String.format(java.util.Locale.ROOT, """
                                <deployment version='1.0'>
                                  <prod>
                                    <region>eu</region>
@@ -332,7 +333,7 @@ public class ContainerModelBuilderTest extends ContainerModelBuilderTestBase {
                                    %s
                                  </endpoints>
                                </deployment>
-                               """.formatted(endpointsTag);
+                               """, endpointsTag);
         ApplicationPackage applicationPackage = new MockApplicationPackage.Builder().withServices(servicesXml).withDeploymentSpec(deploymentXml).build();
         InMemoryProvisioner provisioner = new InMemoryProvisioner(true, false, "host1.yahoo.com", "host2.yahoo.com");
         VespaModel model = new VespaModel(new NullConfigModelRegistry(), new DeployState.Builder()
@@ -522,7 +523,7 @@ public class ContainerModelBuilderTest extends ContainerModelBuilderTestBase {
                 .withHosts(hostsXml)
                 .withServices(servicesXml)
                 .build();
-        VespaModel model = new VespaModel(applicationPackage);
+        VespaModel model = new VespaModel(TestDeployState.create(applicationPackage));
         assertEquals(1, model.hostSystem().getHosts().size());
     }
 
@@ -751,7 +752,7 @@ public class ContainerModelBuilderTest extends ContainerModelBuilderTestBase {
     }
 
     void createModelWithTesterNodes(String testerNodesXml) {
-        String containerXml = "<container id='default' version='1.0'>%s</container>".formatted(testerNodesXml);
+        String containerXml = String.format(java.util.Locale.ROOT, "<container id='default' version='1.0'>%s</container>", testerNodesXml);
         VespaModelTester tester = new VespaModelTester();
         tester.setApplicationId("t", "a", "i-t");
         tester.addHosts(3);
@@ -813,7 +814,7 @@ public class ContainerModelBuilderTest extends ContainerModelBuilderTestBase {
         return DomBuilderTest.parse(
                 "<container id='default' version='1.0'>",
                 "  <search>",
-                String.format("    <renderer id='%s'/>", rendererId),
+                String.format(java.util.Locale.ROOT, "    <renderer id='%s'/>", rendererId),
                 "  </search>",
                 "</container>");
     }
