@@ -13,6 +13,7 @@ import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
+import java.util.Locale;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -53,13 +54,13 @@ public class Json implements Iterable<Json> {
     public Json f(String field) { return field(field); }
     public Json field(String field) {
         requireType(Type.OBJECT);
-        return new Json(inspector.field(field), path.isEmpty() ? field : "%s.%s".formatted(path, field));
+        return new Json(inspector.field(field), path.isEmpty() ? field : String.format(Locale.ROOT, "%s.%s", path, field));
     }
 
     public Json a(int index) { return entry(index); }
     public Json entry(int index) {
         requireType(ARRAY);
-        return new Json(inspector.entry(index), "%s[%d]".formatted(path, index));
+        return new Json(inspector.entry(index), String.format(Locale.ROOT, "%s[%d]", path, index));
     }
 
     public int length() { return inspector.children(); }
@@ -103,7 +104,7 @@ public class Json implements Iterable<Json> {
         try {
             return Instant.parse(asString());
         } catch (DateTimeParseException e) {
-            throw new InvalidJsonException("Expected JSON member '%s' to be a valid timestamp: %s".formatted(path, e.getMessage()));
+            throw new InvalidJsonException(String.format(Locale.ROOT, "Expected JSON member '%s' to be a valid timestamp: %s", path, e.getMessage()));
         }
     }
     public Instant asInstant(Instant defaultValue) {
@@ -171,14 +172,13 @@ public class Json implements Iterable<Json> {
 
     private InvalidJsonException createInvalidTypeException(Type... expected) {
         var expectedTypesString = Arrays.stream(expected).map(this::toString).collect(joining("' or '", "'", "'"));
-        var pathString = path.isEmpty() ? "JSON" : "JSON member '%s'".formatted(path);
+        var pathString = path.isEmpty() ? "JSON" : String.format(Locale.ROOT, "JSON member '%s'", path);
         return new InvalidJsonException(
-                "Expected %s to be a %s but got '%s'"
-                        .formatted(pathString, expectedTypesString, toString(inspector.type())));
+                String.format(Locale.ROOT, "Expected %s to be a %s but got '%s'", pathString, expectedTypesString, toString(inspector.type())));
     }
 
     private InvalidJsonException createMissingMemberException() {
-        return new InvalidJsonException(path.isEmpty() ? "Missing JSON" : "Missing JSON member '%s'".formatted(path));
+        return new InvalidJsonException(path.isEmpty() ? "Missing JSON" : String.format(Locale.ROOT, "Missing JSON member '%s'", path));
     }
 
     private String toString(Type type) {
